--- a/application/views/admin_home.html
+++ b/application/views/admin_home.html
@@ -43,7 +43,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1>- Admin -</h1>
 				<h3><a href="home_c/product" class=""><b>> Product <</b></a></h3>
-				<h3><a href="home_c/message" class=""><b>> Messages Box <</b></a></h3>
+				<h3><a href="home_c/message" class=""><b>> User Complaint <</b></a></h3>
 				<h3><a href="home_c/report" class=""><b>> Report <</b></a></h3>
 				</div>
 			</div><!-- row -->
