--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -44,175 +44,18 @@
       </div><!-- row -->
     </div><!-- container -->
   </div><!-- headerwrap -->
-
+  
 	<div>
-		<div class="container">
-			<div>
-				<div class="col-md-10 col-md-offset-1" style="padding-top:30px; padding-bottom:25px">
+    <div class="container w" style="margin-bottom:20px">
+        <div class="container">
           <div class="row centered">
-        
-              <legend><h1 style="padding-top:13px">My Cart</h1></legend>
-        
-          </div>
-      
-				</div>
-        
+            <h1>My Cart</h1>
+          </div><!-- row -->
+        </div><!-- container -->
+      </div>
+		<div class="container">
         <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white; padding-bottom: 20px">
           <ol style="list-style-type:none; padding-left: 0px ;padding-bottom: 0px">
-<!-- 
-<<<<<<< HEAD
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/imac-retina-step1-hero-2014.jpeg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>27-inch iMac with Retina 5K Display</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-8">
-                      </div>
-                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
-                        <button class="btn btn-danger" type="button">remove</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-8">
-                      </div>
-                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
-                        <button class="btn btn-danger" type="button">remove</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-8">
-                      </div>
-                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
-                        <button class="btn btn-danger" type="button">remove</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="assets/img/iphone6.jpg" width="185" height="104">
-                </div>
-                <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
-                  <div>
-                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
-                      <div class="col-md-6">
-                        <h3>iPhone 6</h3>
-                      </div>
-                      <div class="col-md-2" style="font-size: 13px; padding-top:27px">
-                        200,000 bath
-                      </div>
-                      <div class="col-md-1" style="padding-top:15px; padding-left:0px; padding-right:0px">
-                        <input style="width:100%; font-size: 12px; padding-right: 10px" type="text" class="form-control" id="inputEmail" placeholder="1" >
-                      </div>
-                      <div class="col-md-3" style="font-size: 13px; padding-top:27px; padding-right:0px; padding-left:70px">
-                      2,000,000 bath
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="row col-md-1">
-                      </div>
-                      <div class="row col-md-2">
-                        <a href="#">more info...</a>
-                      </div>
-                      <div class="row col-md-8">
-                      </div>
-                      <div class="row col-md-2" style="padding-right:0px;padding-left:40px">
-                        <button class="btn btn-danger" type="button">remove</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-======= -->
 
           <?php 
                 $sum=0;
@@ -283,7 +126,7 @@
           </div>
           </div>
         </div>
-			</div><!-- row -->
+	
 		</div><!-- container -->
 	</div><!-- headerwrap -->
 
