--- a/application/views/problemForm.html
+++ b/application/views/problemForm.html
@@ -53,7 +53,7 @@
             <div class="container w ">
               <div class="container">
                 <div class="row centered">              
-                  <legend><h1>Problem Report</h1></legend>
+                 <h1>Problem Report</h1>
                 </div>
               </div><!-- row -->
             </div><!-- container -->
