--- a/application/views/productDesc.html
+++ b/application/views/productDesc.html
@@ -61,6 +61,7 @@
                 echo '<br><strong>Quantity: </strong>'.$product->Quantity. ' ea';
                 echo '<br><strong>Announcement date: </strong>'.$product->Datetime;
                 echo '<br><strong>Seller: </strong>';
+                echo '<br><br><h3>Details</h3>';
                 echo '<br><strong>Brand: </strong>'.$product->Brand;
                 echo '<br><strong>Model: </strong>'.$product->Model;
                 echo '<br><strong>Capacity: </strong>'.$product->Capacity;
@@ -83,6 +84,7 @@
                 echo '<br><strong>End of auction date: </strong>'.$product->End_Date;
                 echo '<br><strong>Auction start date: </strong>'.$product->Datetime;
                 echo '<br><strong>Seller: </strong>'.$seller_name;
+                echo '<br><br><h3>Details</h3>';
                 echo '<br><strong>Brand: </strong>'.$product->Brand;
                 echo '<br><strong>Model: </strong>'.$product->Model;
                 echo '<br><strong>Capacity: </strong>'.$product->Capacity;
