--- a/application/views/messageBox.html
+++ b/application/views/messageBox.html
@@ -51,7 +51,7 @@
         <div class="container w ">
           <div class="container">
             <div class="row centered">              
-                <legend><h1><?php if($type==2||$type==3) echo 'Message Box'; else echo 'User Complaint'; ?></h1></legend>
+               <h1><?php if($type==2||$type==3) echo 'Message Box'; else echo 'User Complaint'; ?></h1>
               </div>
               <div class="row" style="margin-top:20px">
                 <a href=<?php echo site_url("message_c/sendMessage"); ?>><?php if($type==2||$type==3) echo '<button type="button" class="btn btn-default" style="margin-top:-30px;margin-bottom:20px">NEW Message</button>'; ?></a>
