--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -57,7 +57,7 @@ include 'HTMLHeader.html';
                </div>
              </div>
 
-             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
+             <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;margin-bottom:20px">
               <ol style="list-style-type:none; padding-left: 0px">
                 <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
                   <form class="form-horizontal row" id="search-form" name="search-form" action="product_c/search" method="post" style="padding-top:20px;">
@@ -168,7 +168,7 @@ include 'HTMLHeader.html';
         }
 
       }
-        startTime();
+        // startTime();
 
     </script>
   </body>
