--- a/application/views/guest_menu.html
+++ b/application/views/guest_menu.html
@@ -11,6 +11,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href=<?php echo site_url('home_c'); ?>>HOME</a></li>
+					<li><a href=<?php echo site_url('home_c/product'); ?>>PRODUCT</a></li>
 					<li><a href=<?php echo site_url('home_c/login'); ?>>SIGN IN</a></li>
 					<li><a href=<?php echo site_url('home_c/register'); ?>>SIGN UP</a></li>
 				</ul>
