--- a/application/views/signup.html
+++ b/application/views/signup.html
@@ -717,7 +717,7 @@ Zimbabwe
 							<div class="radio">
 								<label>
 									<input type="radio" name="type" id="type" value="2" checked="">
-									Customer
+									Buyer
 								</label>
 							</div>
 							<div class="radio">
