--- a/application/views/paymentForm.html
+++ b/application/views/paymentForm.html
@@ -54,7 +54,7 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;padding-top:20px;margin-bottom:25px;">
 						<?php 
-						// print_r($products);
+						print_r($products);
 
 						// echo "===========================================================================";
 						foreach ($products as $row){
