--- a/application/views/productDesc.html
+++ b/application/views/productDesc.html
@@ -51,11 +51,11 @@
           </div>
 				</div>
         
-        <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white">
+        <div class="col-md-10 col-md-offset-1 border-radius" style="background-color:white;margin-bottom:20px">
           <div class="row" >
             <img class="col-md-5" src=<?php echo '"'.base_url().'assets/img/'.$product->Image.'"' ?> width="350px" height="300" style="margin:20px 20px">
             <div class="col-md-5" style="margin-left:40px;margin-right:40px;margin-bottom:40px">
-            <h1><?php echo $product->Name; ?></h1><h3> Time left: <a id="time1">00</a></h3>
+            <h1><?php echo $product->Name; ?></h1><h3> Time left: <a id="time1">00:00:00</a></h3>
             <!-- detail of each type (2 type)-->
             <?php
               
@@ -127,7 +127,7 @@
   <script src=<?php echo base_url("assets/js/validation_function.js");?> ></script>
   <script>
     $('#time').hide();
-    startTime();
+     startTime();
   </script>
   </body>
 </html>
