--- a/application/views/seller_menu.html
+++ b/application/views/seller_menu.html
@@ -6,18 +6,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home_c" style="padding:2px 15px 2px 15px"> <?php echo img ("assets/img/dumbobay-logo-sm.png");?>></a>
+          <a class="navbar-brand" href=<?php echo site_url("home_c");?> style="padding:2px 15px 2px 15px"> <?php echo img ("assets/img/dumbobay-logo-sm.png");?></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 
-            <li><a href=<? echo site_url('home_c'); ?>>HOME</a></li>
-            <li><a href=<? echo site_url('home_c/product'); ?>>PRODUCT</a></li>
-            <li><a href=<? echo site_url('product_c/newProduct'); ?>>ADD PRODUCT</a></li>
-            <li><a href=<? echo site_url('home_c/message'); ?>>MSG BOX</a></li>
-            <li><a href=<? echo site_url('home_c/history'); ?>>HISTORY</a></li>
+            <li><a href=<?php echo site_url('home_c'); ?>>HOME</a></li>
+            <li><a href=<?php echo site_url('home_c/product'); ?>>PRODUCT</a></li>
+            <li><a href=<?php echo site_url('product_c/newProduct');?>>ADD PRODUCT</a></li>
+            <li><a href=<?php echo site_url('home_c/message'); ?>>MSG BOX</a></li>
+            <li><a href=<?php echo site_url('home_c/history'); ?>>HISTORY</a></li>
             <!-- <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li> -->
-          	<li><a href=<? echo site_url('home_c/logout'); ?>>SIGN OUT</a></li>
+          	<li><a href=<?php echo site_url('home_c/logout'); ?>>SIGN OUT</a></li>
           	<li><a href=<?php echo site_url('member_c/memberDetail/').'/'.$username;?>>| <?php echo " ".$username." ";?> |</a></li>
           </ul>
         </div><!--/.nav-collapse -->
