--- a/application/views/productDesc.html
+++ b/application/views/productDesc.html
@@ -55,7 +55,7 @@
           <div class="row" >
             <img class="col-md-5" src=<?php echo '"'.base_url().'assets/img/'.$product->Image.'"' ?> width="350px" height="300" style="margin:20px 20px">
             <div class="col-md-5" style="margin-left:40px;margin-right:40px;margin-bottom:40px">
-            <h1><?php echo $product->Name; ?></h1><h3> Time left: <a id="time1">00:00:00</a></h3>
+            <h1><?php echo $product->Name; ?></h1><?php if($product->Type==2) echo '<h3> Time left: <a id="time1">00:00:00</a></h3>'; ?>
             <!-- detail of each type (2 type)-->
             <?php
               
